--- a/CodePlayground/CSS/style.css
+++ b/CodePlayground/CSS/style.css
@@ -1,15 +1,106 @@
 
-
+/*Global*/
 *{
     margin:0%;
     padding:0%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 3vh;
+    background-color: lightgray;
+}
+
+h1{
+    padding:10%;
 }
 
 
 
-/*
+
+
+/*buttons*/
+
+.button{
+    padding: 15px 25px;
+    margin: auto;
+    justify-self: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    box-shadow: 0 9px black;
+    border-radius: 5px;
+    outline: none;
+    transition: ease-in;
+}
+
+.button2{
+    padding: 15px 25px;
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    box-shadow: 0 9px black;
+    border-radius: 5px;
+    outline: none;
+    transition: ease-in;
+}
+
+.button:hover{
+    border: black 3px solid;
+}
+
+.button:active{
+    background-color: orangered;
+    box-shadow: 0 5px black;
+    transform: translateY(4px);
+}
+
+.button2:active{
+    background-color: orangered;
+    box-shadow: 0 5px black;
+    transform: translateY(4px);
+}
+
+
+/*button game*/
+
+h1{
+    margin: auto;
+    text-align: center;
+}
+.container{
+    margin: auto;
+    padding: 5%;
+}
+
+#buttonGame{
+    background: gray;
+    padding: 3%;
+    
+}
+
+#display, #taunt{
+    padding: 2%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background:lightgray;
+
+}
+
+/*car guess*/
+
+
+#cars{
+    padding: 2%;
+    align-items: center;
+    justify-content: center;
+}
+
+
+/* 
+
+this code is saved for later
+
 .container{
     font-size: 40px;
     min-height: 300px;
@@ -46,62 +137,3 @@
 }
 
 */
-
-*{
-    background-color: lightgray;
-}
-
-h1{
-    margin: auto;
-    text-align: center;
-}
-.container{
-    margin: auto;
-    padding: 5%;
-}
-
-#buttonGame{
-    background: gray;
-    padding: 3%;
-    
-}
-
-
-.button{
-    padding: 15px 25px;
-    margin: auto;
-    justify-self: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    box-shadow: 0 9px black;
-    border-radius: 5px;
-    outline: none;
-    transition: ease-in;
-}
-
-.button:hover{
-    border: black 3px solid;
-}
-
-.button:active{
-    background-color: orangered;
-    box-shadow: 0 5px black;
-    transform: translateY(4px);
-}
-
-#display, #taunt{
-    padding: 2%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background:lightgray;
-
-}
-
-#cars{
-    padding: 2%;
-    align-items: center;
-    justify-content: center;
-}
